@@ -94,6 +94,7 @@ def start_server(
         })
     __start_background_tasks(task_definitions)
 
+    app.logger.info("STARTING FLASK")
     server = Server(
         ("0.0.0.0", config.HTTP_PORT),
         PathInfoDispatcher({"/": app})
