@@ -1,6 +1,7 @@
 V 0.12.0:
   - Added type annotations to db model attributes
   - Made db model relations bi-directional
+  - Fixed sentry logging behaviour for flask
 V 0.11.0:
   - Log traceback in errors in flask framework
 V 0.10.2:
